--- a/argocdod/apps/quaylogs/templates/pull-secret.yaml
+++ b/argocdod/apps/quaylogs/templates/pull-secret.yaml
@@ -4,7 +4,6 @@ apiVersion: v1
 metadata:
   name: pull-secret
   namespace: quaylogs
-data:
-  .dockerconfigjson: >-
-    eyJhdXRocyI6eyJxdWF5LmFwcHMuZGV2LmNsb3VkbGV0LWRldi5jb20iOnsidXNlcm5hbWUiOiJjbG91ZGxldF9hZG1pbiIsInBhc3N3b3JkIjoiUGFzc3dvcmRAMTIzIiwiYXV0aCI6IlkyeHZkV1JzWlhSZllXUnRhVzQ2VUdGemMzZHZjbVJBTVRJeiIsImVtYWlsIjoiIn19fQ==
+stringData:
+  .dockerconfigjson: {"auths":{"quay.apps.{{ .Values.configmap.fqdn }}":{"username":"cloudlet_admin","password":"Password@123","auth":"Y2xvdWRsZXRfYWRtaW46UGFzc3dvcmRAMTIz","email":""}}}
 type: kubernetes.io/dockerconfigjson
