--- a/argocdod/apps/quaylogs/templates/pull-secret.yaml
+++ b/argocdod/apps/quaylogs/templates/pull-secret.yaml
@@ -5,5 +5,5 @@ metadata:
   name: pull-secret
   namespace: quaylogs
 stringData:
-  .dockerconfigjson: '{\"auths\":{\"quay.apps.np.{{ .Values.configmap.fqdn }}\":{\"username\":\"cloudlet_admin\",\"password\":\"Password@123\",\"auth\":\"Y2xvdWRsZXRfYWRtaW46UGFzc3dvcmRAMTIz\"}}}'
+  .dockerconfigjson: '{"auths":{"quay.apps.np.{{ .Values.configmap.fqdn }}":{"username":"cloudlet_admin","password":"Password@123","auth":"Y2xvdWRsZXRfYWRtaW46UGFzc3dvcmRAMTIz","email":""}}}'
 type: kubernetes.io/dockerconfigjson
