update quaylogs and argo-to-splunk

--- a/minio-test/Dockerfile
+++ b/minio-test/Dockerfile
@@ -5,7 +5,7 @@ RUN useradd -u 999 -ms /bin/bash minio-test
 RUN mkdir -p /minio-test/src/config
 WORKDIR /minio-test/src
 COPY oc app.py start.sh .
-RUN mv oc /usr/bin && touch meshi
+RUN mv oc /usr/bin
 RUN pip3 install requests schedule minio urllib3 kubernetes
 RUN chmod 777 /minio-test -R && chown minio-test:minio-test /minio-test -R
 USER minio-test
