--- a/argo-to-splunk/helm-charts/templates/cronjob.yml
+++ b/argo-to-splunk/helm-charts/templates/cronjob.yml
@@ -1,8 +1,8 @@
 apiVersion: batch/v1beta1
 kind: CronJob
 metadata:
-  name: quaylogs
-  namespace: quaylogs
+  name: argo-to-splunk
+  namespace: argo-to-splunk
 spec:
   schedule: "*/1 * * * *"
   startingDeadlineSeconds: 300
@@ -10,7 +10,7 @@ spec:
   jobTemplate:
     metadata:
       labels:
-        app: quaylogs
+        app: argo-to-splunk
     spec:
       backoffLimit: 0
       template:
@@ -18,17 +18,17 @@ spec:
           volumes:
             - name: config-volume
               configMap:
-                name: quaylogs
+                name: argo-to-splunk
                 defaultMode: 420
           containers:
-            - name: quaylogs
+            - name: argo-to-splunk
               image: 'quay.apps.{{ .Values.configmap.fqdn }}/{{ .Values.containers.repository }}/{{ .Values.containers.image }}:{{ .Values.containers.version }}'
               env:
                 - name: fqdn
                   value: {{ .Values.configmap.fqdn }}
               volumeMounts:
                 - name: config-volume
-                  mountPath: /quaylogs/src/config
+                  mountPath: /argo-to-splunk/src/config
               imagePullPolicy: Always
           imagePullSecrets:
              - name: pull-secret    
