--- a/argo-to-splunk/helm-charts/templates/pull-secret.yaml
+++ b/argo-to-splunk/helm-charts/templates/pull-secret.yaml
@@ -3,7 +3,7 @@ kind: Secret
 apiVersion: v1
 metadata:
   name: pull-secret
-  namespace: quaylogs
+  namespace: argo-to-splunk
 stringData:
   .dockerconfigjson: '{"auths":{"quay.apps.{{ .Values.configmap.fqdn }}":{"username":"cloudlet_admin","password":"Password@123","auth":"Y2xvdWRsZXRfYWRtaW46UGFzc3dvcmRAMTIz","email":""}}}'
 type: kubernetes.io/dockerconfigjson
