--- a/argo-to-splunk/helm-charts/values.yaml
+++ b/argo-to-splunk/helm-charts/values.yaml
@@ -5,6 +5,6 @@ configmap:
   fqdn: cloudlet.dev
 
 containers:
-  repository: cloudlet-org
+  repository: meshistern
   image: argo-to-splunk
   version: latest
