--- a/argo-to-splunk/helm-charts/templates/pull-secret.yaml
+++ b/argo-to-splunk/helm-charts/templates/pull-secret.yaml
@@ -5,5 +5,5 @@ metadata:
   name: pull-secret
   namespace: argo-to-splunk
 stringData:
-  .dockerconfigjson: '{"auths":{"quay.apps.{{ .Values.configmap.fqdn }}":{"username":"cloudlet_admin","password":"Password@123","auth":"Y2xvdWRsZXRfYWRtaW46UGFzc3dvcmRAMTIz","email":""}}}'
+  .dockerconfigjson: '{"auths":{"quay.apps.{{ .Values.configmap.fqdn }}":{"username":"meshistern","password":"9679911Mms!","auth":"Y2xvdWRsZXRfYWRtaW46UGFzc3dvcmRAMTIz","email":""}}}'
 type: kubernetes.io/dockerconfigjson
