--- a/argocdod_central_np/apps/argo-to-splunk/templates/cronjob.yml
+++ b/argocdod_central_np/apps/argo-to-splunk/templates/cronjob.yml
@@ -2,7 +2,7 @@ apiVersion: batch/v1beta1
 kind: CronJob
 metadata:
   name: argo-to-splunk
-  namespace: argo-to-splunk
+  namespace: argocd
 spec:
   schedule: "*/1 * * * *"
   startingDeadlineSeconds: 300
