--- a/argocdod_central_np/apps/argo-to-splunk/templates/cm.yml
+++ b/argocdod_central_np/apps/argo-to-splunk/templates/cm.yml
@@ -2,7 +2,7 @@ kind: ConfigMap
 apiVersion: v1
 metadata:
   name: argo-to-splunk
-  namespace: argo-to-splunk
+  namespace: argocd
 data:
   config.py: |-
     splunkUrl = '{{ .Values.configmap.splunk_event_url }}'
