--- a/argocdod_central_np/Chart.yaml
+++ b/argocdod_central_np/Chart.yaml
@@ -1,5 +1,5 @@
 apiVersion: v1
 appVersion: "1.0"
 description: "An application that contains all the appliqués that will be in the main cloud"
-name: argocdod_central
+name: argocdod-central
 version: 1.0.0
