--- a/argocdod_central_np/templates/aliver.yaml
+++ b/argocdod_central_np/templates/aliver.yaml
@@ -9,7 +9,7 @@ spec:
     server: {{ .Values.spec.destination.server }}
   project: {{ .Values.spec.project }}
   source:
-    path: argocdod/apps/aliver
+    path: argocdod-central/apps/aliver
     repoURL: {{ .Values.spec.source.repoURL }}
     targetRevision: {{ .Values.spec.source.targetRevision }}
     helm:
