--- a/argocdod_central_prod/templates/postgrest.yaml
+++ b/argocdod_central_prod/templates/postgrest.yaml
@@ -9,7 +9,7 @@ spec:
     server: {{ .Values.spec.destination.server }}
   project: {{ .Values.spec.project }}
   source:
-    path: argocdod/apps/postgrest
+    path: argocdod_central_prod/apps/postgrest
     repoURL: {{ .Values.spec.source.repoURL }}
     targetRevision: {{ .Values.spec.source.targetRevision }}
     helm:
