implement changes to app-argo

--- a/argocdod/apps/app-argo/values.yaml
+++ b/argocdod/apps/app-argo/values.yaml
@@ -10,12 +10,11 @@ conf:
   appsApi = 'api/v1/clusters'
   authApi = 'api/v1/session'
   login = {"username": "admin", "password": "redhat"}
-  splunkUrl = 'https://40.118.64.131:8088/services/collector/event'
-  splunkAuth = {'Authorization': 'Splunk c92a548a-e243-41ab-9168-8a17ce013342'}
   repoApi = 'api/v1/repositories'
   cluster_name = 'np'
   reponame = 'cloudlet'
   url = 'https://argocd.apps.np.cloudlet-dev.com/'
   verifySSl = False
 
-
+  splunk:
+    hec_token: "c92a548a-e243-41ab-9168-8a17ce013342"
