--- a/argocdod/apps/app-argo/templates/conf.yaml
+++ b/argocdod/apps/app-argo/templates/conf.yaml
@@ -9,8 +9,8 @@ data:
      appsApi = '{{ .Values.configmap.appsApi }}'
      authApi = '{{ .Values.configmap.authApi }}'
      login = '{{ .Values.configmap.login }}'
-     splunkUrl = '{{ .Values.configmap.splunkUrl }}'
-     splunkAuth = '{{ .Values.configmap.splunkAuth }}'
+     splunkUrl = '{{ .Values.splunk.url }}'
+     splunkAuth = 'Splunk {{ .Values.splunk.hec_token }}'
      repoApi = '{{ .Values.configmap.repoApi }}'
      cluster_name = '{{ .Values.configmap.cluster_name }}'
      reponame = '{{ .Values.configmap.reponame }}'
