--- a/argocdod_central_np/apps/certificates-status/templates/pull-secret.yml
+++ b/argocdod_central_np/apps/certificates-status/templates/pull-secret.yml
@@ -4,5 +4,5 @@ metadata:
   name: pull-secret
   namespace: certificates-status
 stringData:
-  .dockerconfigjson: '{"auths":{"quay.apps.{{ .Values.configmap.fqdn }}":{"username":"meshistern","password":"Password@123","auth":"Y2xvdWRsZXRfYWRtaW46UGFzc3dvcmRAMTIz","email":""}}}'
+  .dockerconfigjson: '{"auths":{"quay.io":{"username":"meshistern","password":"Password@123","auth":"Y2xvdWRsZXRfYWRtaW46UGFzc3dvcmRAMTIz","email":""}}}'
 type: kubernetes.io/dockerconfigjson
