--- a/argocdod/apps/toston/values.yaml
+++ b/argocdod/apps/toston/values.yaml
@@ -37,7 +37,7 @@ argo_app:
     argoUrl: 'https://argocd.apps.np.cloudlet-dev.com/'
     appsApi: 'api/v1/clusters'
     authApi: 'api/v1/session'
-    splunkUrl: '{{ .Values.splunk.url }}'
+    splunkUrl: '{{ .Values.spec.splunk.url }}'
     repoApi: 'api/v1/repositories'
     cluster_name: 'np'
     reponame: 'cloudlet'
