--- a/argocdod/apps/speedtest-download/templates/cronjob.yaml
+++ b/argocdod/apps/speedtest-download/templates/cronjob.yaml
@@ -25,7 +25,7 @@ spec:
         spec:
           containers:
             - name: speedtest-download-cloudlet
-              image: {{ .Values.IMAGE_NAME }}
+              image: 'quay.apps.{{ .Values.configmap.fqdn }}/{{ .Values.IMAGE_NAME }}'
               env:
                 - name: MAIN_APP_URL 
                   value: "{{ .Values.MAIN_APP_URL }}"
