--- a/argocdod/apps/speedtest-download/values.yaml
+++ b/argocdod/apps/speedtest-download/values.yaml
@@ -6,7 +6,7 @@ SPLUNK_TOKEN: "0dde0859-27ff-43aa-b981-3eaca4fa4813"
 SPLUNK_URL: "https://40.118.64.131:8088/services/collector/event"
 MIN_CHECK_TIME: 2
 OCP_NAME: np
-#configmap:
- # fqdn: cloudlet.dev
+configmap:
+  fqdn: cloudlet.dev
 IMAGE_NAME: "cloudlet-org/speedtest-download:latest"
 #IMAGE_NAME: "docker.io/meshistern/speedtest-download:latest"
