--- a/argocdod/apps/apicast-helm/templates/deployment.yaml
+++ b/argocdod/apps/apicast-helm/templates/deployment.yaml
@@ -99,6 +99,17 @@ spec:
         - name: management
           containerPort: 8090
           protocol: TCP
+        volumeMounts:
+        - name: trusted-ca
+          mountPath: /etc/pki/ca-trust/extracted/pem
+          readOnly: true
+      volumes:
+      - name: trusted-ca
+        configMap:
+          name: trusted-ca
+          items:
+            - key: ca-bundle.crt 
+              path: tls-ca-bundle.pem    
   triggers:
   - type: ConfigChange
 {{- end }}
