--- a/argocdod/apps/externalsecrets-operator/templates/deployment.yaml
+++ b/argocdod/apps/externalsecrets-operator/templates/deployment.yaml
@@ -33,8 +33,19 @@ spec:
       imagePullSecrets:
         {{- toYaml .Values.imagePullSecrets | nindent 8 }}
       {{- end }}
+      volumes:
+      - name: trusted-ca
+        configMap:
+          name: trusted-ca
+          items:
+            - key: ca-bundle.crt 
+              path: tls-ca-bundle.pem 
       containers:
         - name: {{ .Chart.Name }}
+          volumeMounts:
+          - name: trusted-ca
+            mountPath: /etc/pki/ca-trust/extracted/pem
+            readOnly: true
           image: "{{ .Values.image.repository }}/{{ .Values.image.name }}:{{ .Values.image.tag }}"
           ports:
           - name: prometheus
