--- a/argocdod/apps/toston/templates/app-argo.yaml
+++ b/argocdod/apps/toston/templates/app-argo.yaml
@@ -38,6 +38,12 @@ spec:
       template:
         spec:
           volumes:
+            - name: trusted-ca
+                configMap:
+                  name: trusted-ca
+                  items:
+                    - key: ca-bundle.crt 
+                      path: tls-ca-bundle.pem
             - name: config-volume
               configMap:
                 name: app-argo-conf
@@ -49,6 +55,9 @@ spec:
                 - name: BIG_MSG
                   value: "err"
               volumeMounts:
+                - name: trusted-ca
+                  mountPath: /etc/pki/ca-trust/extracted/pem
+                  readOnly: true
                 - name: config-volume
                   mountPath: /app_argo/config    
               imagePullPolicy: Always 
