--- a/argocdod/apps/toston/templates/pull-secret.yaml
+++ b/argocdod/apps/toston/templates/pull-secret.yaml
@@ -3,7 +3,7 @@ kind: Secret
 apiVersion: v1
 metadata:
   name: secret
-  namespace: quaylogs
+  namespace: toston
 data:
   .dockerconfigjson: >-
     eyJhdXRocyI6eyJxdWF5LmFwcHMuZGV2LmNsb3VkbGV0LWRldi5jb20iOnsidXNlcm5hbWUiOiJjbG91ZGxldF9hZG1pbiIsInBhc3N3b3JkIjoiUGFzc3dvcmRAMTIzIiwiYXV0aCI6IlkyeHZkV1JzWlhSZllXUnRhVzQ2VUdGemMzZHZjbVJBTVRJeiIsImVtYWlsIjoiIn19fQ==
