--- a/argocdod/apps/speedtest-download/templates/pull-secret.yaml
+++ b/argocdod/apps/speedtest-download/templates/pull-secret.yaml
@@ -2,8 +2,10 @@
 kind: Secret
 apiVersion: v1
 metadata:
-  name: pull-secret
-  namespace: quaylogs
+  name: secret
+  namespace: speedtest-download-cloudlet
+
+Actions
 data:
   .dockerconfigjson: >-
     eyJhdXRocyI6eyJxdWF5LmFwcHMuZGV2LmNsb3VkbGV0LWRldi5jb20iOnsidXNlcm5hbWUiOiJjbG91ZGxldF9hZG1pbiIsInBhc3N3b3JkIjoiUGFzc3dvcmRAMTIzIiwiYXV0aCI6IlkyeHZkV1JzWlhSZllXUnRhVzQ2VUdGemMzZHZjbVJBTVRJeiIsImVtYWlsIjoiIn19fQ==
