--- a/argocdod/apps/speedtest-download/templates/cronjob.yaml
+++ b/argocdod/apps/speedtest-download/templates/cronjob.yaml
@@ -36,7 +36,8 @@ spec:
               - name: trusted-ca
                 mountPath: /etc/pki/ca-trust/extracted/pem
                 readOnly: true
-              image: 'quay.apps.{{ .Values.configmap.fqdn }}/{{ .Values.IMAGE_NAME }}'
+              #image: 'quay.apps.{{ .Values.configmap.fqdn }}/{{ .Values.IMAGE_NAME }}'
+              image: '{ .Values.IMAGE_NAME }}'
               env:
                 - name: MAIN_APP_URL 
                   value: "{{ .Values.MAIN_APP_URL }}"
