Feat/improve variable support (#29)
* define splunk values in values.yaml

* Implement change to speedtest

* Implement changes to toston

* implement changes to app-argo

* implement changes to collectorforopenshift

* changes for toston

* implement changes to quaylogs

* Rename setup-2020-10-18-09:56:14.log to setup-2020-10-18-095614.log

* remove splunk from values.yaml

* revert changes of splunk var name and declarations

* revert doc changes

* minor change

Co-authored-by: Adam Ben Shmuel <bsadambs@gmail.com>
Co-authored-by: Adami <AdamBenShmuel@idf.il>

--- a/argocdod/apps/speedtest-download/templates/cronjob.yaml
+++ b/argocdod/apps/speedtest-download/templates/cronjob.yaml
@@ -42,9 +42,9 @@ spec:
                 - name: MAIN_APP_URL 
                   value: "{{ .Values.MAIN_APP_URL }}"
                 - name: SPLUNK_TOKEN
-                  value: "{{ .Values.SPLUNK_TOKEN }}"
+                  value: "{{ .Values.spec.splunk.hec_token }}"
                 - name: SPLUNK_URL
-                  value: "{{ .Values.SPLUNK_URL }}"
+                  value: "{{ .Values.spec.splunk.url }}"
                 - name: MIN_CHECK_TIME
                   value: "{{ .Values.MIN_CHECK_TIME }}"
                 - name: OCP_NAME
