--- a/argocdod/apps/toston/values.yaml
+++ b/argocdod/apps/toston/values.yaml
@@ -37,7 +37,7 @@ argo_app:
     argoUrl: 'https://argocd.apps.np.cloudlet-dev.com/'
     appsApi: 'api/v1/clusters'
     authApi: 'api/v1/session'
-    splunkUrl: 'https://40.118.64.131:8088/services/collector/event'
+    splunkUrl: '{{ .Values.spec.splunk.url }}'
     repoApi: 'api/v1/repositories'
     cluster_name: 'np'
     reponame: 'cloudlet'
@@ -45,4 +45,3 @@ argo_app:
     verifySSl: 'False'
     userName: 'admin'
     password: 'redhat'
-
