--- a/argocdod/templates/speedtest-download.yaml
+++ b/argocdod/templates/speedtest-download.yaml
@@ -19,6 +19,6 @@ spec:
         - name: OCP_NAME
           value: {{ template "cluster_name" . }}
         - name: SPLUNK_TOKEN
-          value: "{{ .Values.spec.splunk.hec_token }}"
+          value: "{{ .Values.splunk.hec_token }}"
         - name: SPLUNK_URL
-          value: "{{ .Values.spec.splunk.url }}"
+          value: "{{ .Values.splunk.url }}"
