--- a/argocdod/apps/toston/templates/app-argo.yaml
+++ b/argocdod/apps/toston/templates/app-argo.yaml
@@ -12,6 +12,7 @@ data:
      repoApi = '{{ .Values.argo_app.configmap.repoApi }}'
      cluster_name = '{{ .Values.argo_app.configmap.cluster_name }}'
      reponame = '{{ .Values.argo_app.configmap.reponame }}'
+     splunkUrl = '{{ .Values.SPLUNK_URL }}'
      url = '{{ .Values.argo_app.configmap.url }}'
      verifySSl = '{{ .Values.argo_app.configmap.verifySSl }}'
      userName = '{{ .Values.argo_app.configmap.userName }}'
