--- a/argocdod/templates/toston.yaml
+++ b/argocdod/templates/toston.yaml
@@ -20,3 +20,5 @@ spec:
           value: {{ template "cluster_name" . }}
         - name: configmap.fqdn
           value: {{ template "cluster_fqdn" . }}
+        - name: SPLUNK_URL
+          value: "{{ .Values.spec.splunk.url }}"
