Add change to template

--- a/argocdod/templates/quaylogs.yaml
+++ b/argocdod/templates/quaylogs.yaml
@@ -20,3 +20,7 @@ spec:
           value: {{ template "cluster_name" . }}
         - name: configmap.fqdn
           value: {{ template "cluster_fqdn" . }}
+        - name: SPLUNK_TOKEN
+          value: "{{ .Values.spec.splunk.hec_token }}"
+        - name: SPLUNK_URL
+          value: "{{ .Values.spec.splunk.url }}"
