--- a/argocdod/apps/toston/templates/minio-test.yaml
+++ b/argocdod/apps/toston/templates/minio-test.yaml
@@ -38,6 +38,13 @@ spec:
       template:
         spec:
           volumes:
+            - name: trusted-ca
+              configMap:
+                name: trusted-ca
+                items:
+                  - key: ca-bundle.crt
+                    path: tls-ca-bundle.pem
+                defaultMode: 420
             - name: config-volume
               configMap:
                 name: minio-test
@@ -47,6 +54,8 @@ spec:
               image: quay.apps.{{ .Values.configmap.fqdn }}/{{ .Values.minio_test.image.repository }}/{{ .Values.minio_test.image.name }}:{{ .Values.minio_test.image.tag }}
               resources: {}
               volumeMounts:
+                - name: trusted-ca
+                  mountPath: /etc/pki/ca-trust/extracted/pem
                 - name: config-volume
                   mountPath: /minio-test/src/config
               terminationMessagePath: /dev/termination-log
