--- a/minio-test/Dockerfile
+++ b/minio-test/Dockerfile
@@ -4,9 +4,8 @@ RUN userdel saslauth
 RUN useradd -u 999 -ms /bin/bash minio-test
 RUN mkdir -p /minio-test/src/config
 WORKDIR /minio-test/src
-COPY oc app.py start.sh .
-RUN mv oc /usr/bin
-RUN pip3 install requests schedule minio urllib3 kubernetes
+COPY app.py .
+RUN pip3 install requests minio urllib3 kubernetes ipaddress&& pip3 install --upgrade requests
 RUN chmod 777 /minio-test -R && chown minio-test:minio-test /minio-test -R
 USER minio-test
-CMD sh ./start.sh && python app.py
+CMD python app.py
