--- a/argocdod_central_np/apps/argo-to-splunk/values.yaml
+++ b/argocdod_central_np/apps/argo-to-splunk/values.yaml
@@ -1,5 +1,5 @@
 configmap:
-  splunkUrl: https://40.118.64.131:8088/services/collector/event
+  splunkUrl: https://splunk.cloudlet-dev.com:8088/services/collector/event
   argoUrl: https://argocd.apps.np.cloudlet-dev.com
   splunkToken: c92a548a-e243-41ab-9168-8a17ce013342
 
