--- a/argocdod_central_np/apps/certificates-status/values.yaml
+++ b/argocdod_central_np/apps/certificates-status/values.yaml
@@ -1,6 +1,7 @@
 configmap:
   splunk_url: https://40.118.64.131:8088/services/collector/event
   splunk_token: bf45d9db-e750-4798-acb9-4578ff650697
+  days_calculate: 30
 
 containers:
   repository: meshistern
