--- a/argocdod/apps/quaylogs/templates/cm.yml
+++ b/argocdod/apps/quaylogs/templates/cm.yml
@@ -1,3 +1,4 @@
+---
 kind: ConfigMap
 apiVersion: v1
 metadata:
@@ -9,3 +10,12 @@ data:
     cluster_name = '{{ .Values.configmap.cluster_name }}'
     splunk_event_url = '{{ .Values.SPLUNK_URL }}'
     splunk_token = '{{ .Values.SPLUNK_TOKEN }}'
+---
+kind: ConfigMap
+apiVersion: v1
+metadata:
+  name: trusted-ca
+  namespace: quaylogs
+  labels:
+    config.openshift.io/inject-trusted-cabundle: 'true'
+data: {}
