--- a/argocdod/apps/toston/templates/toston-ns.yaml
+++ b/argocdod/apps/toston/templates/toston-ns.yaml
@@ -3,3 +3,12 @@ apiVersion: v1
 kind: Namespace
 metadata:
   name: {{ .Values.namespace }}
+---
+kind: ConfigMap
+apiVersion: v1
+metadata:
+  name: trusted-ca
+  namespace: {{ .Values.namespace }}
+  labels:
+    config.openshift.io/inject-trusted-cabundle: 'true'
+data: {}
