--- a/argocdod/apps/quaylogs/templates/cm.yml
+++ b/argocdod/apps/quaylogs/templates/cm.yml
@@ -17,5 +17,4 @@ metadata:
   name: trusted-ca
   namespace: quaylogs
   labels:
-    config.openshift.io/inject-trusted-cabundle: 'true'
-data: {}
+    config.openshift.io/inject-trusted-cabundle: "true"
