--- a/argocdod/apps/speedtest-download/templates/pull-secret.yaml
+++ b/argocdod/apps/speedtest-download/templates/pull-secret.yaml
@@ -2,7 +2,7 @@
 kind: Secret
 apiVersion: v1
 metadata:
-  name: secret
+  name: pull-secret
   namespace: speedtest-download-cloudlet
 stringData:
   .dockerconfigjson: '{"auths":{"quay.apps.{{ .Values.configmap.fqdn }}":{"username":"cloudlet_admin","password":"Password@123","auth":"Y2xvdWRsZXRfYWRtaW46UGFzc3dvcmRAMTIz","email":""}}}'
