--- a/argocdod/apps/toston/templates/quay-test.yaml
+++ b/argocdod/apps/toston/templates/quay-test.yaml
@@ -65,4 +65,4 @@ spec:
               imagePullPolicy: Always
           imagePullSecrets:
              - name: secret    
-          restartPolicy: Never
+          restartPolicy: OnFailure
