--- a/argocdod/apps/toston/templates/matoshon.yaml
+++ b/argocdod/apps/toston/templates/matoshon.yaml
@@ -36,5 +36,5 @@ spec:
                   path: tls-ca-bundle.pem
           imagePullSecrets:
              - name: secret    
-          restartPolicy: Never
+          restartPolicy: OnFailure
 
