--- a/argocdod/apps/toston/templates/app-argo.yaml
+++ b/argocdod/apps/toston/templates/app-argo.yaml
@@ -63,5 +63,5 @@ spec:
               imagePullPolicy: Always 
           imagePullSecrets:
              - name: secret
-          restartPolicy: Never
+          restartPolicy: OnFailure
           
