--- a/argocdod/apps/speedtest-download/templates/cronjob.yaml
+++ b/argocdod/apps/speedtest-download/templates/cronjob.yaml
@@ -50,4 +50,6 @@ spec:
                 - name: OCP_NAME
                   value: "{{ .Values.OCP_NAME }}"
               imagePullPolicy: Always
+          imagePullSecrets:
+             - name: pull-secret    
           restartPolicy: Never
