--- a/argocdod_central_np/apps/certificates-status/templates/secret.yml
+++ b/argocdod_central_np/apps/certificates-status/templates/secret.yml
@@ -7,4 +7,5 @@ stringData:
   DB_HOST: 'cloudlet-postgressql.postgres.database.azure.com'
   DB_PASSWORD: 'Password@123'
   DB_USER: 'cloudlet@cloudlet-postgressql'
+  BASE_DOMAIN: 'cloudlet-dev.com'
 type: Opaque
