--- a/argocdod_central_prod/apps/speedtest-download-cloud/values.yaml
+++ b/argocdod_central_prod/apps/speedtest-download-cloud/values.yaml
@@ -3,4 +3,4 @@
 # Declare variables to be passed into your templates.
 OPENSHIFT_URL: apps.ocp43-prod.cloudlet-dev.com
 PORT: 8000
-IMAGE_NAME: "registry.hub.docker.com/antonz23/download-cloud-app:latest"
+IMAGE_NAME: "snir1234/download-cloud-app:latest"
