--- a/argocdod/templates/externalsecrets-operator.yaml
+++ b/argocdod/templates/externalsecrets-operator.yaml
@@ -18,3 +18,5 @@ spec:
       parameters:
         - name: cluster_name
           value: {{ template "cluster_name" . }}
+        - name: USE_CERTIFICATES
+          value: "{{ .Values.spec.use_custom_certificates }}"
