--- a/argocdod/apps/app-argo/templates/conf.yaml
+++ b/argocdod/apps/app-argo/templates/conf.yaml
@@ -15,3 +15,4 @@ data:
      reponame = '{{ .Values.configmap.reponame }}'
      url = '{{ .Values.configmap.url }}'
      verifySSl = '{{ .Values.configmap.verifySSl }}'
+     USE_CERTIFICATES = "{{ .Values.spec.use_custom_certificates }}"
