--- a/argocdod/templates/apicast.yaml
+++ b/argocdod/templates/apicast.yaml
@@ -15,3 +15,6 @@ spec:
     helm:
       valueFiles:
         - values.yaml
+      parameters:
+        - name: USE_CERTIFICATES
+          value: "{{ .Values.spec.use_custom_certificates }}"
