--- a/argocdod/templates/toston.yaml
+++ b/argocdod/templates/toston.yaml
@@ -22,3 +22,5 @@ spec:
           value: {{ template "cluster_fqdn" . }}
         - name: SPLUNK_URL
           value: "{{ .Values.spec.splunk.url }}"
+        - name: USE_CERTIFICATES
+          value: "{{ .Values.spec.use_custom_certificates }}"
